Added receiving name

--- a/TicTacToeClientSide/MainWindow.xaml
+++ b/TicTacToeClientSide/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <StackPanel>
-            <TextBlock FontSize="30" Name="player" ></TextBlock>
+            <TextBox FontSize="30" Name="player" ></TextBox>
             <Button Name="Connect" Click="Button_Click" FontSize="30" >Connect To Server</Button>
             <WrapPanel Name="myWrap" Width="350" HorizontalAlignment="Center" Orientation="Horizontal" >
                 <Button Click="b1_Click" Name="b1" FontSize="40" Margin="5" Height="100"
